[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/atlasica/dock/IconLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/atlasica/dock/collapsible/Collapsible.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.223529, 0.278431, 1 )

[node name="Collapsible" type="VBoxContainer"]
margin_right = 14.0
margin_bottom = 14.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="PanelContainer" parent="."]
margin_right = 132.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 1 )

[node name="IconLabel" parent="Header" instance=ExtResource( 1 )]
margin_right = 132.0
icon = 7
text = "Collapsible"

[node name="Label" parent="Header/IconLabel" index="2"]
margin_right = 108.0
text = "Collapsible"

[node name="ButtonCollapse" type="ToolButton" parent="Header"]
margin_right = 132.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
[connection signal="toggled" from="Header/ButtonCollapse" to="." method="_on_ButtonCollapse_toggled"]

[editable path="Header/IconLabel"]
